--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,10 @@
             "role": "Developer"
         }
     ],
+    "support": {
+        "issues": "https://github.com/abr4xas/php-instapago/issues"
+    },
+    "minimum-stability": "dev-master",
     "require": {
         "php": ">=5.3.0"
     },
