--- a/composer.json
+++ b/composer.json
@@ -13,12 +13,8 @@
             "role": "Developer"
         }
     ],
+    "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.0"
-    },
-    "autoload": {
-        "psr-0": {
-            "Instapago": "src/"
-        }
     }
 }
