--- a/composer.json
+++ b/composer.json
@@ -16,5 +16,10 @@
     "minimum-stability": "dev",
     "require": {
         "php": ">=5.3.0"
+    },
+    "autoload": {
+        "psr-0": {
+            "Instapago": "src"
+        }
     }
 }
