--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,7 @@
             "email": "me@abr4xas.org"
         }
     ],
-    "minimum-stability": "master",
+    "minimum-stability": "stable",
     "require": {
         "php": "5.6.*"
     },
