--- a/composer.json
+++ b/composer.json
@@ -10,7 +10,7 @@
     ],
     "minimum-stability": "dev",
     "require": {
-        "php": ">=5.6.*"
+        "php": ">=5.6.20"
     },
     "autoload": {
         "psr-0": {
