--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,5 @@
 {
-    "name": "instapagophp/instapago",
+    "name": "php-instapago/instapago",
     "description": "Librería Instapago para PHP",
     "minimum-stability": "stable",
     "prefer-stable" : true,
