Actualizado * Se actualiza estructura de directorio * El autoload de composer ahora usa `psr-4` * Actualizado el README con información de instalación con composer * Actualizado el README con información de como usar sin composer * Agregado manejo de errores. * Agregado archivo autoload personalizado * Se crea estructura para las pruebas unitarias :bug:

--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,11 @@
     "name": "instapago/instapago",
     "type": "library",
     "description": "Librería Instapago para PHP",
-    "keywords": ["venezuela","instapago","banesco"],
+    "keywords": [
+        "venezuela",
+        "instapago",
+        "banesco"
+    ],
     "license": "MIT",
     "authors": [
         {
@@ -14,9 +18,12 @@
     "require": {
         "php": ">=5.5.0"
     },
+    "require-dev": {
+        "phpunit/phpunit": "5.4.6"
+    },
     "autoload": {
-        "psr-0": {
-            "Instapago": "src/"
+        "psr-4": {
+            "Instapago\\": "Instapago"
         }
     }
 }
