--- a/.travis.yml
+++ b/.travis.yml
@@ -10,7 +10,12 @@ before_script:
   - composer install --prefer-source --no-interaction --dev
 
 # Commands you want to run that will verify your build.
-script: phpunit --configuration="phpunit.xml" --include-path="tests"
+script: 
+  - phpunit --configuration="phpunit.xml" --include-path="tests"
+  - vendor/bin/phpunit --coverage-clover=coverage.xml
+
+after_success:
+    - bash <(curl -s https://codecov.io/bash)
 
 # Customize when the notification emails are sent.
 notifications:
