--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -7,4 +7,9 @@
   <logging>
         <log type="coverage-clover" target="clover.xml"/>
     </logging>
+    <filter>
+        <whitelist>
+            <directory suffix=".php">Instapago</directory>
+        </whitelist>
+    </filter>
 </phpunit>
