--- a/.gitattributes
+++ b/.gitattributes
@@ -4,3 +4,5 @@
 /.gitignore         export-ignore
 /.travis.yml        export-ignore
 /phpunit.xml.dist   export-ignore
+/CHANGELOG.md       export-ignore
+/contributors.txt   export-ignore
