--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,7 @@
         "guzzlehttp/guzzle": "^6.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "5.7.5"
+        "phpunit/phpunit": "^5.0"
     },
     "autoload": {
         "psr-4": {
