--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -1,4 +1,6 @@
-<phpunit bootstrap="vendor/autoload.php" colors="true">
+<phpunit bootstrap="vendor/autoload.php" 
+    colors="true" 
+    verbose="true">
   <testsuites>
     <testsuite name="instapago">
       <directory>tests/</directory>
