--- a/.travis.yml
+++ b/.travis.yml
@@ -2,7 +2,9 @@ language: php
 php:
   - '5.6'
   - '7.0'
+  - '7.1'
   - hhvm
+  - nightly
 
 # Commands to be run before your environment runs.
 before_script:
