--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,6 @@
 /.gitattributes     export-ignore
 /.gitignore         export-ignore
 /.travis.yml        export-ignore
-/phpunit.xml.dist   export-ignore
+/phpunit.xml        export-ignore
 /CHANGELOG.md       export-ignore
 /contributors.txt   export-ignore
