--- a/.gitignore
+++ b/.gitignore
@@ -1,7 +1,11 @@
-composer.phar
-/vendor/
-test.php
-.DS_Store
-# Commit your application's lock file http://getcomposer.org/doc/01-basic-usage.md#composer-lock-the-lock-file
-# You may choose to ignore a library lock file http://getcomposer.org/doc/02-libraries.md#lock-file
+.idea
+.php_cs
+.php_cs.cache
+.phpunit.result.cache
+build
 composer.lock
+coverage
+docs
+phpunit.xml
+psalm.xml
+vendor
