--- a/composer.json
+++ b/composer.json
@@ -10,16 +10,20 @@
     "license": "MIT",
     "authors": [
         {
-            "name": "abr4xas",
-            "email": "me@abr4xas.org",
-            "homepage": "http://abr4xas.org"
+            "name": "angel cruz",
+            "email": "angel@tepuilabs.dev",
+            "homepage": "https://angelcruz.dev",
+            "role": "Developer"
         }
     ],
     "require": {
-        "guzzlehttp/guzzle": "^6.3"
+		"guzzlehttp/guzzle": "^7.2",
+        "php": "^7.4|^8.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^7.3"
+        "friendsofphp/php-cs-fixer": "^2.16",
+        "phpunit/phpunit": "^9.3",
+        "vimeo/psalm": "^3.11"
     },
     "autoload": {
         "psr-4": {
@@ -27,6 +31,15 @@
         }
     },
     "scripts": {
-      "test": "phpunit --verbose"
-    }
+        "psalm": "vendor/bin/psalm",
+        "test": "vendor/bin/phpunit",
+        "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
+		"format": "vendor/bin/php-cs-fixer fix --allow-risky=yes",
+		"all" : "composer psalm && composer test && composer test-coverage && composer format"
+    },
+    "config": {
+        "sort-packages": true
+    },
+    "minimum-stability": "dev",
+    "prefer-stable": true
 }
