--- a/composer.json
+++ b/composer.json
@@ -1,18 +1,17 @@
 {
     "name": "instapago/instapago",
-    "type": "library",
     "description": "Librería Instapago para PHP",
     "keywords": [
-        "venezuela",
         "instapago",
-        "banesco"
+        "instapago"
     ],
+    "homepage": "https://github.com/instapago/instapago",
     "license": "MIT",
     "authors": [
         {
             "name": "angel cruz",
             "email": "angel@tepuilabs.dev",
-            "homepage": "https://angelcruz.dev",
+            "homepage": "https://angelcruz.me",
             "role": "Developer"
         }
     ],
@@ -27,14 +26,19 @@
     },
     "autoload": {
         "psr-4": {
-            "Instapago\\": "Instapago"
+            "Instapago\\Instapago\\": "src"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "Instapago\\Instapago\\Tests\\": "tests"
         }
     },
     "scripts": {
         "psalm": "vendor/bin/psalm",
         "test": "vendor/bin/phpunit",
         "test-coverage": "vendor/bin/phpunit --coverage-html coverage",
-		"format": "vendor/bin/php-cs-fixer fix --allow-risky=yes",
+        "format": "vendor/bin/php-cs-fixer fix --allow-risky=yes",
 		"all" : "composer psalm && composer test && composer test-coverage && composer format"
     },
     "config": {
