--- a/.php_cs.dist
+++ b/.php_cs.dist
@@ -2,7 +2,7 @@
 
 $finder = Symfony\Component\Finder\Finder::create()
     ->in([
-        __DIR__ . '/Instapago',
+        __DIR__ . '/src',
         __DIR__ . '/tests',
     ])
     ->name('*.php')
