--- a/.editorconfig
+++ b/.editorconfig
@@ -2,15 +2,14 @@ root = true
 
 [*]
 charset = utf-8
+indent_size = 4
+indent_style = space
 end_of_line = lf
 insert_final_newline = true
-indent_style = tab
-indent_size = 4
 trim_trailing_whitespace = true
 
 [*.md]
 trim_trailing_whitespace = false
 
-[*.yml]
-indent_style = space
+[*.{yml,yaml}]
 indent_size = 2
