--- a/.gitattributes
+++ b/.gitattributes
@@ -1,8 +1,16 @@
-/help               export-ignore
-/tests              export-ignore
-/.gitattributes     export-ignore
-/.gitignore         export-ignore
-/.travis.yml        export-ignore
-/phpunit.xml        export-ignore
-/CHANGELOG.md       export-ignore
-/contributors.txt   export-ignore
+# Path-based git attributes
+# https://www.kernel.org/pub/software/scm/git/docs/gitattributes.html
+
+# Ignore all test and documentation with "export-ignore".
+/.github                 export-ignore
+/.gitattributes          export-ignore
+/.gitignore              export-ignore
+/phpunit.xml.dist        export-ignore
+/psalm.xml.dist          export-ignore
+/tests                   export-ignore
+/.editorconfig           export-ignore
+/.php-cs-fixer.dist.php  export-ignore
+/art                     export-ignore
+/docs                    export-ignore
+/UPGRADING.md            export-ignore
+/help                    export-ignore
