--- a/.github/ISSUE_TEMPLATE/config.yml
+++ b/.github/ISSUE_TEMPLATE/config.yml
@@ -1,11 +1,14 @@
 blank_issues_enabled: false
 contact_links:
-    - name: Ask a Question
-      url: https://github.com/instapago/instapago/discussions/new?category=q-a
+    - name: Ask a question
+      url: https://github.com/abr4xas/php-instapago/discussions/new?category=q-a
       about: Ask the community for help
-    - name: Feature Request
-      url: https://github.com/instapago/instapago/discussions/new?category=ideas
+    - name: Request a feature
+      url: https://github.com/abr4xas/php-instapago/discussions/new?category=ideas
       about: Share ideas for new features
-    - name: Bug Report
-      url: https://github.com/instapago/instapago/issues/new
+    - name: Report a security issue
+      url: https://github.com/abr4xas/php-instapago/security/policy
+      about: Learn how to notify us for sensitive bugs
+    - name: Report a bug
+      url: https://github.com/abr4xas/php-instapago/issues/new
       about: Report a reproducable bug
