--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "instapago/instapago",
-    "description": ":D",
+    "description": "Instapago is a technological solution designed for the market of electronic commerce (eCommerce) in Venezuela and Latin America, with the intention of offering a premium product category, which allows people and companies leverage their expansion capabilities, facilitating payment mechanisms for customers with a friendly integration into systems currently used.",
     "keywords": [
         "Instapago",
         "instapago"
@@ -15,12 +15,13 @@
         }
     ],
     "require": {
-        "php": "^8.1",
-        "guzzlehttp/guzzle": "^7.5.1"
+        "php": "^8.2|^8.3|^8.4",
+        "guzzlehttp/guzzle": "^7.9.2"
     },
     "require-dev": {
-        "laravel/pint": "^1.10",
-        "pestphp/pest": "^2.6"
+        "laravel/pint": "^1.18.3",
+        "mockery/mockery": "^1.6",
+        "pestphp/pest": "^3.7"
     },
     "autoload": {
         "psr-4": {
