--- a/.github/workflows/run-tests-pest.yml
+++ b/.github/workflows/run-tests-pest.yml
@@ -1,13 +1,6 @@
 name: Tests
 
-on:
-  push:
-    paths:
-      - '**.php'
-      - '.github/workflows/run-tests.yml'
-      - 'phpunit.xml.dist'
-      - 'composer.json'
-      - 'composer.lock'
+on: [pull_request]
 
 jobs:
   test:
