--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,6 @@
 {
     "name": "instapago/instapago",
-    "description": "Instapago is a technological solution designed for the market of electronic commerce (eCommerce) in Venezuela and Latin America, with the intention of offering a premium product category, which allows people and companies leverage their expansion capabilities, facilitating payment mechanisms for customers with a friendly integration into systems currently used.",
+    "description": "Instapago is a technological solution designed for the market of electronic commerce (eCommerce) in Venezuela and Latin America.",
     "keywords": [
         "Instapago",
         "instapago"
